Squashed commit of the following:
commit 0f15147ce865b5f3964af2cefc6c4f7b878c42c9
Author: Panason1c <arnauddissongo@gmail.com>
Date:   Tue Jan 9 18:09:23 2024 +0100

    le change

commit 54b1b3983ac0e9aa9a27d34aa9d5a81f4d59fc0c
Author: Panason1c <arnauddissongo@gmail.com>
Date:   Tue Jan 9 17:31:39 2024 +0100

    d

commit 261d9df82a16f7b1ea2e33742907f2fbbc7df368
Author: Panason1c <arnauddissongo@gmail.com>
Date:   Tue Jan 9 17:12:46 2024 +0100

    ht

commit defca91097a33a67d16b26a73023427a505089b6
Author: Panason1c <arnauddissongo@gmail.com>
Date:   Tue Jan 9 16:55:08 2024 +0100

    mod

--- a/symfony/templates/creation/index.html.twig
+++ b/symfony/templates/creation/index.html.twig
@@ -179,7 +179,7 @@ button:hover {
     <header style="background-color: #f8f9fa; padding: 10px;">
         <div style="display: flex; justify-content: space-between; align-items: center;">
             <div>
-                <h1>Yugi API</h1>
+                <h1>Yugi API création</h1> 
             </div>
             <div>
                 <a href="#" style="margin-right: 20px;">Page 1</a>
