--- a/symfony/templates/base.html.twig
+++ b/symfony/templates/base.html.twig
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <link rel="icon" href="{{ asset("assets/images/yu gi api logo.png")}}">
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.css')}}" />
+            <link rel="stylesheet" href="{{ asset('assets/css/styles.css') }}"/>
         {% endblock %}
 
         {% block javascripts %}
@@ -13,56 +14,35 @@
         {% endblock %}
     </head>
     <body>
-        <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-            <h5 class="my-0 mr-md-auto font-weight-normal">Company name</h5>
-            <nav class="my-2 my-md-0 mr-md-3">
-                <a class="p-2 text-dark" href="{{ path('home') }}">Accueil</a>
-                <a class="p-2 text-dark" href="{{ path('cartesAll') }}">Cartes</a>
-                <a class="p-2 text-dark" href="{{ path('cartesPerso') }}">Personalisation</a>
-                <a class="p-2 text-dark" href="{{ path('users') }}">Utilisateurs</a>
-            </nav>
-            <a class="btn btn-outline-primary" href="#">Sign up</a>
-        </div>
-        <div class="container">
-            {% block body %}
-            {% endblock %}
-            <footer class="pt-4 my-md-5 pt-md-5 border-top">
-                <div class="row">
-                <div class="col-12 col-md">
-                    <img class="mb-2" src="/docs/4.6/assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">
-                    <small class="d-block mb-3 text-muted">&copy; 2017-2022</small>
-                </div>
-                <div class="col-6 col-md">
-                    <h5>Features</h5>
-                    <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Cool stuff</a></li>
-                    <li><a class="text-muted" href="#">Random feature</a></li>
-                    <li><a class="text-muted" href="#">Team feature</a></li>
-                    <li><a class="text-muted" href="#">Stuff for developers</a></li>
-                    <li><a class="text-muted" href="#">Another one</a></li>
-                    <li><a class="text-muted" href="#">Last time</a></li>
-                    </ul>
-                </div>
-                <div class="col-6 col-md">
-                    <h5>Resources</h5>
-                    <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Resource</a></li>
-                    <li><a class="text-muted" href="#">Resource name</a></li>
-                    <li><a class="text-muted" href="#">Another resource</a></li>
-                    <li><a class="text-muted" href="#">Final resource</a></li>
-                    </ul>
-                </div>
-                <div class="col-6 col-md">
-                    <h5>About</h5>
-                    <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Team</a></li>
-                    <li><a class="text-muted" href="#">Locations</a></li>
-                    <li><a class="text-muted" href="#">Privacy</a></li>
-                    <li><a class="text-muted" href="#">Terms</a></li>
-                    </ul>
-                </div>
-                </div>
-            </footer>
-        </div>
+        <header>
+            <!-- Logo on the left -->
+            <div>
+                <img src="/assets/images/yu gi api logo.png" alt="Yu-Gi-Oh! API Logo">
+            </div>
+
+            <!-- Navigation Links right next to the logo -->
+            <div class="navigation">
+                <a href="{{ path('home') }}">Accueil</a>
+                <a href="{{ path('cartesAll') }}">Cartes</a>
+                <a href="{{ path('cartesPerso') }}">Personalisation</a>
+            </div>
+
+            <!-- Profile Image on the far right -->
+            <div class="profile">
+                <img class="profile-image" src="/assets/images/pp_magie.png" alt="Profile Image">
+            </div>
+        </header>
+        {% block body %}
+        {% endblock %}
+        <footer>
+            <div>
+                &copy; 2024 Yu-Gi-Oh! World. Tous droits réservés.
+                <br>
+                Suivez-nous sur les réseaux sociaux :
+                <a href="#">Facebook</a> | 
+                <a href="#">Twitter</a> | 
+                <a href="#">Instagram</a>
+            </div>
+        </footer>
     </body>
 </html>
