--- a/symfony/templates/cartes_perso/index.html.twig
+++ b/symfony/templates/cartes_perso/index.html.twig
@@ -8,13 +8,21 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+<div class="width100">
+    {% for carte in cartes %}
+        <div class="mt-1 wrapperCenter">
+            <p class="mx-5">{{ carte.name }}</p>
+            <button class="mx-1"><a href="{{ path('modifCarte')}}">Modifier</a></button>
+            <button class="mx-1"><a>Supprimer</a></button>
+        </div>      
+    {% endfor %}
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Dave/Important/ChallengeWeb/Yugi-API-/symfony/src/Controller/CartesPersoController.php'|file_link(0) }}">src/Controller/CartesPersoController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Dave/Important/ChallengeWeb/Yugi-API-/symfony/templates/cartes_perso/index.html.twig'|file_link(0) }}">templates/cartes_perso/index.html.twig</a></code></li>
-    </ul>
+    <div class="mt-3 wrapperCenter">
+        <button><a href="{{ path('creationCarte')}}">Crée votre carte !</a></button>
+    </div>
+
+    <div id="cartes" style="display: none;">{{ cartes | json_encode() | raw }}</div>
 </div>
+{% endblock %}
+{% block javascripts %}
 {% endblock %}
